Some syntactic sugar to make the medicine go down...